<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".ActivityCrearG">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="#2f70af"
        android:textAlignment="center"
        android:text="@string/banner"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/grupo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="28dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="19dp"
        android:text="@string/descripcion"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        tools:layout_editor_absoluteX="28dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="228dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:text="@string/añadirp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="303dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="67dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:layout_editor_absoluteY="303dp" />

    <Button
        android:id="@+id/btnBuscarUs"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/white"
        android:text="Cancelar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="402dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/white"
        android:text="Guardar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="402dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="86dp"
        android:layout_height="79dp"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:layout_editor_absoluteY="5dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:layout_editor_absoluteY="173dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:hint="Agrega una descripcion"
        android:textColor="#FFFFFF"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:layout_editor_absoluteY="239dp" />
</androidx.constraintlayout.widget.ConstraintLayout>